--- a/tmux.conf
+++ b/tmux.conf
@@ -15,3 +15,35 @@ bind l select-pane -R
 
 # Do not halt on EOF; just detach
 bind-key -n C-d detach
+
+
+
+# Panes
+set -g pane-border-bg        colour237
+set -g pane-active-border-bg colour237
+
+set -g pane-border-fg        colour241
+set -g pane-active-border-fg colour249
+
+
+
+# Status line
+set -g status-position top
+set -g status-bg colour241
+set -g status-fg colour249
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '%D %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
