--- a/tmux.conf
+++ b/tmux.conf
@@ -47,3 +47,7 @@ setw -g window-status-bg colour235
 setw -g window-status-attr none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
+
+
+# Mouse mode
+set -g mouse on
