--- a/tmux.conf
+++ b/tmux.conf
@@ -18,12 +18,17 @@ bind-key -n C-d detach
 
 
 
-# Panes
+# Panes and windows
 set -g pane-border-bg        colour237
 set -g pane-active-border-bg colour237
 
 set -g pane-border-fg        colour241
 set -g pane-active-border-fg colour249
+
+bind '%' split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
+
+bind 'c' new-window -c "#{pane_current_path}"
 
 
 
@@ -51,3 +56,4 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 
 # Mouse mode
 set -g mouse on
+
