--- a/tmux.conf
+++ b/tmux.conf
@@ -38,7 +38,7 @@ set -g status-bg colour241
 set -g status-fg colour249
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '%D %H:%M:%S '
+set -g status-right '%D %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
 
