--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,8 @@ set -g pane-active-border-bg colour237
 set -g pane-border-fg        colour241
 set -g pane-active-border-fg colour249
 
+set -g renumber-windows on
+
 bind '%' split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 
