--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Better prefix
 unbind C-b
-set -g prefix C-a
+set -g prefix C-Space
 
 
 
@@ -32,6 +32,9 @@ bind '"' split-window -v -c '#{pane_current_path}'
 
 bind 'c' new-window -c "#{pane_current_path}"
 
+set  -g base-index 1
+setw -g pane-base-index 1
+
 
 
 # Status line
@@ -47,15 +50,15 @@ set -g status-left-length 20
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour238
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-current-format ' #I#[fg=colour250] #[fg=colour255]#W#[fg=colour50] #F '
 
 setw -g window-status-fg colour138
 setw -g window-status-bg colour235
 setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I#[fg=colour237] #[fg=colour250]#W#[fg=colour244] #F '
 
 
 
 # Mouse mode
-set -g mouse on
+set -g mouse off
 
