--- a/tmux.conf
+++ b/tmux.conf
@@ -50,7 +50,7 @@ set -g status-left-length 20
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour238
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250] #[fg=colour255]#W#[fg=colour50] #F '
+setw -g window-status-current-format ' #I#[fg=colour250] #[fg=colour255]#W#[fg=colour50] ○ '
 
 setw -g window-status-fg colour138
 setw -g window-status-bg colour235
