--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Correct shell
+set-option -g default-shell /bin/bash
+
 # Better prefix
 unbind C-b
 set -g prefix C-Space
@@ -19,11 +22,8 @@ bind-key -n C-d detach
 
 
 # Panes and windows
-set -g pane-border-bg        colour232
-set -g pane-active-border-bg colour232
-
-set -g pane-border-fg        colour238
-set -g pane-active-border-fg colour229
+set -g pane-border-style "bg=black,fg=#444444"
+set -g pane-active-border-style "bg=black,fg=#AAAAAA"
 
 set -g renumber-windows on
 
@@ -32,33 +32,21 @@ bind '"' split-window -v -c '#{pane_current_path}'
 
 bind 'c' new-window -c "#{pane_current_path}"
 
+bind '9' select-window -l
+
 set  -g base-index 1
 setw -g pane-base-index 1
 
 
 
 # Status line
-set -g status-position top
-set -g status-bg colour238
-set -g status-fg colour249
-set -g status-attr dim
+set -g status-position bottom
+set -g status-bg "black"
+set -g status-fg "white"
 set -g status-left ''
-set -g status-right '%D %H:%M '
+set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250] #[fg=colour255]#W#[fg=colour50] ○ '
-
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour227] #[fg=colour250]#W#[fg=colour244] #F '
-
-
-
-# Mouse mode
-set -g mouse off
-
+setw -g window-status-current-format '[#[fg=yellow]#I #[fg=white]#W#[fg=white]]   '
+setw -g window-status-format '#[fg=yellow]#I #[fg=white]#W#[fg=white]   '
