--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ bind-key -n C-d detach
 
 
 # Panes and windows
-set -g pane-border-style "bg=black,fg=#444444"
+set -g pane-border-style "bg=black,fg=#222222"
 set -g pane-active-border-style "bg=black,fg=#AAAAAA"
 
 set -g renumber-windows on
@@ -32,7 +32,7 @@ bind '"' split-window -v -c '#{pane_current_path}'
 
 bind 'c' new-window -c "#{pane_current_path}"
 
-bind '9' select-window -l
+bind '-' select-window -l
 
 set  -g base-index 1
 setw -g pane-base-index 1
@@ -48,5 +48,15 @@ set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-format '[#[fg=yellow]#I #[fg=white]#W#[fg=white]]   '
-setw -g window-status-format '#[fg=yellow]#I #[fg=white]#W#[fg=white]   '
+setw -g window-status-current-format '[#[fg=cyan]#I #[fg=white]#W#[fg=white]]   '
+setw -g window-status-format '#[fg=cyan]#I #[fg=white]#W#[fg=white]   '
+
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
